// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeeperRewards harvest (own escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 116293,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for latest rewards root 2`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 59519,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 118463,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 79861,
}
`;

exports[`KeeperRewards harvest (own escrow) succeeds for previous rewards root 3`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 61689,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for latest rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 149698,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for latest rewards root 2`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 56363,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 151868,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 2`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 96142,
}
`;

exports[`KeeperRewards harvest (shared escrow) succeeds for previous rewards root 3`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 58533,
}
`;

exports[`KeeperRewards set rewards delay succeeds 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 32615,
}
`;

exports[`KeeperRewards set rewards root succeeds 1`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 115208,
}
`;

exports[`KeeperRewards set rewards root succeeds 2`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 118020,
}
`;
